# Compass

./: .gitignore  CMakeLists.txt  Chaos_In_Convection.hpp  Charged_Particle_EM.hpp  Data_Handling.hpp  Double_Pendulum.hpp  Drag_Queen.hpp  Euler.hpp  EulerC.hpp  EulerC3.hpp  Fitit.hpp  Fn.hpp  FnC.hpp  Fourier_Sqr_Waves.hpp  LCR.hpp  LCR_Oscillations.hpp  LICENSE  Least_Sqr_Fitting.hpp  MASTER.hpp  Projectile.hpp  Quadratic.hpp  README.md  Superposition_Waves.hpp  build-exe.bat  build_exe.bat  build_script.bat  build_script.sh  chaos.cpp  chaos.hpp  charge.cpp  double.cpp  double_pendulum.hpp  drag_queen.cpp  drag_queen.hpp  euler.h  euler.hpp  field.hpp  fn.h  fn.hpp  fourier.hpp  (+21 more)
.github/workflows/: main.yml
source/: example.cpp
website/: db.sqlite3  index.js  launch_app.bat  package-lock.json  package.json  start.py
website/algorithms/: main.py  urls.py  views.py
website/algorithms/programcodes/: abc.md  convection.md  def.md  double_pendulum.md  drag.md  em_oscillations.md  lcr_code.md  projectile_code.md  xyz.md
website/algorithms/static/: bg5.avif  highlight.css
website/algorithms/templates/: app-steps.html  copy_button.html  footer.html  gui.html  home.html  projectile_code.html  samreet copy.html  samreet.html  script.html  style.html
website/algorithms/templatetags/: markdown_extras.py
website/website/: gui.py  settings.py  urls.py
